--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="utf-8"/>
 
-    <link rel="icon" href="%PUBLIC_URL%/assets/img/brand/favicon.ico">
-
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#1a1a1a"/>
     <meta name="description" content="You can buy all AliExpress Products without Dollar or Paypal account with affordable shipping cost."
     />
 
-
     <meta property="fb:app_id" content=""/>
-    <meta property="og:local" content="{{ str_replace('_', '-', app()->getLocale()) }}">
+    <meta property="og:local" content="en">
     <meta property="og:type" content="article">
     <meta property="og:url" content="%PUBLIC_URL%">
     <meta property="og:title" content="ChinaExpress | ঘরে বসে-বিদেশে শপিং">
@@ -21,7 +18,6 @@
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/img/brand/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/img/brand/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/img/brand/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/img/brand/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/assets/img/brand/site.webmanifest">
