--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#1a1a1a"/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/img/brand/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/img/brand/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/img/brand/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/assets/img/brand/site.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/assets/img/brand/safari-pinned-tab.svg" color="#9b1fbc">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/img/brand/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/assets/img/brand/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+
+
+
+
+
     <meta name="description" content="You can buy all AliExpress Products without Dollar or Paypal account with affordable shipping cost."
     />
 
