--- a/frontend/public/assets/plugins/fontello/demo.html
+++ b/frontend/public/assets/plugins/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?16473253');
-      src: url('./font/fontello.eot?16473253#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?16473253') format('woff'),
-           url('./font/fontello.ttf?16473253') format('truetype'),
-           url('./font/fontello.svg?16473253#fontello') format('svg');
+      src: url('./font/fontello.eot?77416646');
+      src: url('./font/fontello.eot?77416646#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?77416646') format('woff'),
+           url('./font/fontello.ttf?77416646') format('truetype'),
+           url('./font/fontello.svg?77416646#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -458,11 +458,14 @@
         <div class="span3" title="Code: 0xf0e6">
           <i class="demo-icon icon-chat-empty">&#xf0e6;</i> <span class="i-name">icon-chat-empty</span><span class="i-code">0xf0e6</span>
         </div>
-        <div class="span3" title="Code: 0xf104">
-          <i class="demo-icon icon-angle-left">&#xf104;</i> <span class="i-name">icon-angle-left</span><span class="i-code">0xf104</span>
+        <div class="span3" title="Code: 0xf0f6">
+          <i class="demo-icon icon-doc-text">&#xf0f6;</i> <span class="i-name">icon-doc-text</span><span class="i-code">0xf0f6</span>
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xf104">
+          <i class="demo-icon icon-angle-left">&#xf104;</i> <span class="i-name">icon-angle-left</span><span class="i-code">0xf104</span>
+        </div>
         <div class="span3" title="Code: 0xf105">
           <i class="demo-icon icon-angle-right">&#xf105;</i> <span class="i-name">icon-angle-right</span><span class="i-code">0xf105</span>
         </div>
@@ -472,11 +475,11 @@
         <div class="span3" title="Code: 0xf129">
           <i class="demo-icon icon-info">&#xf129;</i> <span class="i-name">icon-info</span><span class="i-code">0xf129</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf137">
           <i class="demo-icon icon-angle-circled-left">&#xf137;</i> <span class="i-name">icon-angle-circled-left</span><span class="i-code">0xf137</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf138">
           <i class="demo-icon icon-angle-circled-right">&#xf138;</i> <span class="i-name">icon-angle-circled-right</span><span class="i-code">0xf138</span>
         </div>
@@ -486,11 +489,11 @@
         <div class="span3" title="Code: 0xf14a">
           <i class="demo-icon icon-ok-squared">&#xf14a;</i> <span class="i-name">icon-ok-squared</span><span class="i-code">0xf14a</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf16a">
           <i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf16d">
           <i class="demo-icon icon-instagram-1">&#xf16d;</i> <span class="i-name">icon-instagram-1</span><span class="i-code">0xf16d</span>
         </div>
@@ -500,11 +503,11 @@
         <div class="span3" title="Code: 0xf1f7">
           <i class="demo-icon icon-bell-off-empty">&#xf1f7;</i> <span class="i-name">icon-bell-off-empty</span><span class="i-code">0xf1f7</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf1f9">
           <i class="demo-icon icon-copyright">&#xf1f9;</i> <span class="i-name">icon-copyright</span><span class="i-code">0xf1f9</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf232">
           <i class="demo-icon icon-whatsapp">&#xf232;</i> <span class="i-name">icon-whatsapp</span><span class="i-code">0xf232</span>
         </div>
