invoice and frontend cart info dev

--- a/frontend/public/assets/plugins/fontello/demo.html
+++ b/frontend/public/assets/plugins/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?77416646');
-      src: url('./font/fontello.eot?77416646#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?77416646') format('woff'),
-           url('./font/fontello.ttf?77416646') format('truetype'),
-           url('./font/fontello.svg?77416646#fontello') format('svg');
+      src: url('./font/fontello.eot?24487349');
+      src: url('./font/fontello.eot?24487349#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?24487349') format('woff'),
+           url('./font/fontello.ttf?24487349') format('truetype'),
+           url('./font/fontello.svg?24487349#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -372,16 +372,13 @@
           <i class="demo-icon icon-edit">&#xe82b;</i> <span class="i-name">icon-edit</span><span class="i-code">0xe82b</span>
         </div>
         <div class="span3" title="Code: 0xe82c">
-          <i class="demo-icon icon-headset">&#xe82c;</i> <span class="i-name">icon-headset</span><span class="i-code">0xe82c</span>
+          <i class="demo-icon icon-heart-2">&#xe82c;</i> <span class="i-name">icon-heart-2</span><span class="i-code">0xe82c</span>
         </div>
         <div class="span3" title="Code: 0xe82d">
-          <i class="demo-icon icon-messenger">&#xe82d;</i> <span class="i-name">icon-messenger</span><span class="i-code">0xe82d</span>
+          <i class="demo-icon icon-heart-3">&#xe82d;</i> <span class="i-name">icon-heart-3</span><span class="i-code">0xe82d</span>
         </div>
       </div>
       <div class="row">
-        <div class="span3" title="Code: 0xe82e">
-          <i class="demo-icon icon-shop-window">&#xe82e;</i> <span class="i-name">icon-shop-window</span><span class="i-code">0xe82e</span>
-        </div>
         <div class="span3" title="Code: 0xe82f">
           <i class="demo-icon icon-up-open-mini">&#xe82f;</i> <span class="i-name">icon-up-open-mini</span><span class="i-code">0xe82f</span>
         </div>
@@ -391,24 +388,16 @@
         <div class="span3" title="Code: 0xe831">
           <i class="demo-icon icon-left-open-1">&#xe831;</i> <span class="i-name">icon-left-open-1</span><span class="i-code">0xe831</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe832">
           <i class="demo-icon icon-right-open-1">&#xe832;</i> <span class="i-name">icon-right-open-1</span><span class="i-code">0xe832</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe833">
           <i class="demo-icon icon-up-open-1">&#xe833;</i> <span class="i-name">icon-up-open-1</span><span class="i-code">0xe833</span>
         </div>
         <div class="span3" title="Code: 0xe834">
           <i class="demo-icon icon-spin4 animate-spin">&#xe834;</i> <span class="i-name">icon-spin4</span><span class="i-code">0xe834</span>
-        </div>
-        <div class="span3" title="Code: 0xe835">
-          <i class="demo-icon icon-shop">&#xe835;</i> <span class="i-name">icon-shop</span><span class="i-code">0xe835</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span3" title="Code: 0xe836">
-          <i class="demo-icon icon-play-circle">&#xe836;</i> <span class="i-name">icon-play-circle</span><span class="i-code">0xe836</span>
         </div>
         <div class="span3" title="Code: 0xe839">
           <i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span>
@@ -416,11 +405,11 @@
         <div class="span3" title="Code: 0xf004">
           <i class="demo-icon icon-down-open-1">&#xf004;</i> <span class="i-name">icon-down-open-1</span><span class="i-code">0xf004</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf005">
           <i class="demo-icon icon-up-open">&#xf005;</i> <span class="i-name">icon-up-open</span><span class="i-code">0xf005</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf006">
           <i class="demo-icon icon-right-open">&#xf006;</i> <span class="i-name">icon-right-open</span><span class="i-code">0xf006</span>
         </div>
@@ -430,11 +419,11 @@
         <div class="span3" title="Code: 0xf008">
           <i class="demo-icon icon-menu">&#xf008;</i> <span class="i-name">icon-menu</span><span class="i-code">0xf008</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf00b">
           <i class="demo-icon icon-th-thumb-empty">&#xf00b;</i> <span class="i-name">icon-th-thumb-empty</span><span class="i-code">0xf00b</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf058">
           <i class="demo-icon icon-twitter">&#xf058;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf058</span>
         </div>
@@ -444,11 +433,11 @@
         <div class="span3" title="Code: 0xf063">
           <i class="demo-icon icon-user-female">&#xf063;</i> <span class="i-name">icon-user-female</span><span class="i-code">0xf063</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf08e">
           <i class="demo-icon icon-link-ext">&#xf08e;</i> <span class="i-name">icon-link-ext</span><span class="i-code">0xf08e</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf096">
           <i class="demo-icon icon-check-empty">&#xf096;</i> <span class="i-name">icon-check-empty</span><span class="i-code">0xf096</span>
         </div>
@@ -457,9 +446,6 @@
         </div>
         <div class="span3" title="Code: 0xf0e6">
           <i class="demo-icon icon-chat-empty">&#xf0e6;</i> <span class="i-name">icon-chat-empty</span><span class="i-code">0xf0e6</span>
-        </div>
-        <div class="span3" title="Code: 0xf0f6">
-          <i class="demo-icon icon-doc-text">&#xf0f6;</i> <span class="i-name">icon-doc-text</span><span class="i-code">0xf0f6</span>
         </div>
       </div>
       <div class="row">
