--- a/frontend/public/assets/plugins/fontello/demo.html
+++ b/frontend/public/assets/plugins/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?24487349');
-      src: url('./font/fontello.eot?24487349#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?24487349') format('woff'),
-           url('./font/fontello.ttf?24487349') format('truetype'),
-           url('./font/fontello.svg?24487349#fontello') format('svg');
+      src: url('./font/fontello.eot?85984705');
+      src: url('./font/fontello.eot?85984705#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?85984705') format('woff'),
+           url('./font/fontello.ttf?85984705') format('truetype'),
+           url('./font/fontello.svg?85984705#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -372,13 +372,16 @@
           <i class="demo-icon icon-edit">&#xe82b;</i> <span class="i-name">icon-edit</span><span class="i-code">0xe82b</span>
         </div>
         <div class="span3" title="Code: 0xe82c">
-          <i class="demo-icon icon-heart-2">&#xe82c;</i> <span class="i-name">icon-heart-2</span><span class="i-code">0xe82c</span>
+          <i class="demo-icon icon-headset">&#xe82c;</i> <span class="i-name">icon-headset</span><span class="i-code">0xe82c</span>
         </div>
         <div class="span3" title="Code: 0xe82d">
-          <i class="demo-icon icon-heart-3">&#xe82d;</i> <span class="i-name">icon-heart-3</span><span class="i-code">0xe82d</span>
+          <i class="demo-icon icon-messenger">&#xe82d;</i> <span class="i-name">icon-messenger</span><span class="i-code">0xe82d</span>
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe82e">
+          <i class="demo-icon icon-shop-window">&#xe82e;</i> <span class="i-name">icon-shop-window</span><span class="i-code">0xe82e</span>
+        </div>
         <div class="span3" title="Code: 0xe82f">
           <i class="demo-icon icon-up-open-mini">&#xe82f;</i> <span class="i-name">icon-up-open-mini</span><span class="i-code">0xe82f</span>
         </div>
@@ -388,70 +391,92 @@
         <div class="span3" title="Code: 0xe831">
           <i class="demo-icon icon-left-open-1">&#xe831;</i> <span class="i-name">icon-left-open-1</span><span class="i-code">0xe831</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe832">
           <i class="demo-icon icon-right-open-1">&#xe832;</i> <span class="i-name">icon-right-open-1</span><span class="i-code">0xe832</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe833">
           <i class="demo-icon icon-up-open-1">&#xe833;</i> <span class="i-name">icon-up-open-1</span><span class="i-code">0xe833</span>
         </div>
         <div class="span3" title="Code: 0xe834">
           <i class="demo-icon icon-spin4 animate-spin">&#xe834;</i> <span class="i-name">icon-spin4</span><span class="i-code">0xe834</span>
         </div>
+        <div class="span3" title="Code: 0xe834">
+          <i class="demo-icon icon-heart-4">&#xe834;</i> <span class="i-name">icon-heart-4</span><span class="i-code">0xe834</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe835">
+          <i class="demo-icon icon-shop">&#xe835;</i> <span class="i-name">icon-shop</span><span class="i-code">0xe835</span>
+        </div>
+        <div class="span3" title="Code: 0xe836">
+          <i class="demo-icon icon-play-circle">&#xe836;</i> <span class="i-name">icon-play-circle</span><span class="i-code">0xe836</span>
+        </div>
+        <div class="span3" title="Code: 0xe837">
+          <i class="demo-icon icon-heart-5">&#xe837;</i> <span class="i-name">icon-heart-5</span><span class="i-code">0xe837</span>
+        </div>
+        <div class="span3" title="Code: 0xe838">
+          <i class="demo-icon icon-heart-6">&#xe838;</i> <span class="i-name">icon-heart-6</span><span class="i-code">0xe838</span>
+        </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe839">
           <i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span>
         </div>
         <div class="span3" title="Code: 0xf004">
           <i class="demo-icon icon-down-open-1">&#xf004;</i> <span class="i-name">icon-down-open-1</span><span class="i-code">0xf004</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf005">
           <i class="demo-icon icon-up-open">&#xf005;</i> <span class="i-name">icon-up-open</span><span class="i-code">0xf005</span>
         </div>
         <div class="span3" title="Code: 0xf006">
           <i class="demo-icon icon-right-open">&#xf006;</i> <span class="i-name">icon-right-open</span><span class="i-code">0xf006</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf007">
           <i class="demo-icon icon-left-open">&#xf007;</i> <span class="i-name">icon-left-open</span><span class="i-code">0xf007</span>
         </div>
         <div class="span3" title="Code: 0xf008">
           <i class="demo-icon icon-menu">&#xf008;</i> <span class="i-name">icon-menu</span><span class="i-code">0xf008</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf00b">
           <i class="demo-icon icon-th-thumb-empty">&#xf00b;</i> <span class="i-name">icon-th-thumb-empty</span><span class="i-code">0xf00b</span>
         </div>
         <div class="span3" title="Code: 0xf058">
           <i class="demo-icon icon-twitter">&#xf058;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf058</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf062">
           <i class="demo-icon icon-user-male">&#xf062;</i> <span class="i-name">icon-user-male</span><span class="i-code">0xf062</span>
         </div>
         <div class="span3" title="Code: 0xf063">
           <i class="demo-icon icon-user-female">&#xf063;</i> <span class="i-name">icon-user-female</span><span class="i-code">0xf063</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf08e">
           <i class="demo-icon icon-link-ext">&#xf08e;</i> <span class="i-name">icon-link-ext</span><span class="i-code">0xf08e</span>
         </div>
         <div class="span3" title="Code: 0xf096">
           <i class="demo-icon icon-check-empty">&#xf096;</i> <span class="i-name">icon-check-empty</span><span class="i-code">0xf096</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf0c5">
           <i class="demo-icon icon-docs">&#xf0c5;</i> <span class="i-name">icon-docs</span><span class="i-code">0xf0c5</span>
         </div>
         <div class="span3" title="Code: 0xf0e6">
           <i class="demo-icon icon-chat-empty">&#xf0e6;</i> <span class="i-name">icon-chat-empty</span><span class="i-code">0xf0e6</span>
         </div>
-      </div>
-      <div class="row">
+        <div class="span3" title="Code: 0xf0f6">
+          <i class="demo-icon icon-doc-text">&#xf0f6;</i> <span class="i-name">icon-doc-text</span><span class="i-code">0xf0f6</span>
+        </div>
         <div class="span3" title="Code: 0xf104">
           <i class="demo-icon icon-angle-left">&#xf104;</i> <span class="i-name">icon-angle-left</span><span class="i-code">0xf104</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf105">
           <i class="demo-icon icon-angle-right">&#xf105;</i> <span class="i-name">icon-angle-right</span><span class="i-code">0xf105</span>
         </div>
@@ -461,11 +486,11 @@
         <div class="span3" title="Code: 0xf129">
           <i class="demo-icon icon-info">&#xf129;</i> <span class="i-name">icon-info</span><span class="i-code">0xf129</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf137">
           <i class="demo-icon icon-angle-circled-left">&#xf137;</i> <span class="i-name">icon-angle-circled-left</span><span class="i-code">0xf137</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf138">
           <i class="demo-icon icon-angle-circled-right">&#xf138;</i> <span class="i-name">icon-angle-circled-right</span><span class="i-code">0xf138</span>
         </div>
@@ -475,11 +500,11 @@
         <div class="span3" title="Code: 0xf14a">
           <i class="demo-icon icon-ok-squared">&#xf14a;</i> <span class="i-name">icon-ok-squared</span><span class="i-code">0xf14a</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf16a">
           <i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf16d">
           <i class="demo-icon icon-instagram-1">&#xf16d;</i> <span class="i-name">icon-instagram-1</span><span class="i-code">0xf16d</span>
         </div>
@@ -489,11 +514,11 @@
         <div class="span3" title="Code: 0xf1f7">
           <i class="demo-icon icon-bell-off-empty">&#xf1f7;</i> <span class="i-name">icon-bell-off-empty</span><span class="i-code">0xf1f7</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf1f9">
           <i class="demo-icon icon-copyright">&#xf1f9;</i> <span class="i-name">icon-copyright</span><span class="i-code">0xf1f9</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf232">
           <i class="demo-icon icon-whatsapp">&#xf232;</i> <span class="i-name">icon-whatsapp</span><span class="i-code">0xf232</span>
         </div>
